--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -13,6 +13,7 @@
           media="print"/>
 
 
+
     <style>
         .ui-datepicker-prev {
             background-color: teal;
@@ -48,94 +49,108 @@
         $(document).ready(function () {
             $('#calendar').fullCalendar({
 
-                    header: {
-                        left: 'prev,next',
-                        center: 'title',
-                        right: 'prevYear, nextYear, month,agendaWeek,agendaDay'
-                    },
-                    buttonText: {
-                        prevYear: new moment().year() - 1,
-                        nextYear: new moment().year() + 1
-                    },
-                    viewRender: function (view) {
-                        var y = moment($('#calendar').fullCalendar('getDate')).year();
-                        $(".fc-prevYear-button").text(y - 1);
-                        $(".fc-nextYear-button").text(y + 1);
-                    },
-                    navLinks: true,
-                    selectable: true,
-                    selectHelper: true,
-                    select: function (start, end) {
-                        $('#title').val('');
-                        $('#starts-at').val(start.format('MM/DD/YYYY'));
-                        $('#ends-at').val(start.format('MM/DD/YYYY'));
+                header: {
+                    left: 'prev,next',
+                    center: 'title',
+                    right: 'prevYear, nextYear, month,agendaWeek,agendaDay'
+                },
+                buttonText: {
+                    prevYear: new moment().year() - 1,
+                    nextYear: new moment().year() + 1
+                },
+                viewRender: function (view) {
+                    var y = moment($('#calendar').fullCalendar('getDate')).year();
+                    $(".fc-prevYear-button").text(y - 1);
+                    $(".fc-nextYear-button").text(y + 1);
+                },
+                navLinks: true,
+                selectable: true,
+                selectHelper: true,
+                select: function (start, end) {
+                    $('#title').val('');
+                    $('#starts-at').val(start.format('MM/DD/YYYY'));
+                    $('#ends-at').val(start.format('MM/DD/YYYY'));
 
-                        $("#starts-at").datepicker();
-                        $("#ends-at").datepicker();
-                        $('.modal').modal('show');
-                    },
-                    eventClick: function (event, element) {
-                        $('.modal').modal('show');
-                        $('.modal').find('#title').val(event.title);
-                        $('.modal').find('#starts-at').val(event.start);
-                        $('.modal').find('#ends-at').val(event.end);
+                    $("#starts-at").datepicker();
+                    $("#ends-at").datepicker();
+                    $('.modal').modal('show');
+                },
+                eventClick: function (event, element) {
+                    $('.modal').modal('show');
+                    $('.modal').find('#title').val(event.title);
+                    $('.modal').find('#starts-at').val(event.start);
+                    $('.modal').find('#ends-at').val(event.end);
 
-                    },
-
-                    minTime: "05:00:00",
-                    maxTime: "22:00:00",
-                    editable: true,
-                    eventLimit: true
                 },
 
-                // $("#starts-at, #ends-at").datetimepicker(),
-
-                $('#save-event').on('click', function () {
-                    let title = $('#title').val();
-                    let start_date = $('#starts-at').val()
-                    let end_date = $('#ends-at').val()
-
-                    let csrf_token = '{{ csrf_token }}'
+                minTime: "05:00:00",
+                maxTime: "22:00:00",
+                editable: true,
+                eventLimit: true
+            })
 
 
-                    axios.post("{% url 'shifty:save_day_off' %}", {
-                        title: title,
-                        start_date: start_date,
-                        end_date: end_date
-                    }, {
-                        headers: {'X-CSRFToken': csrf_token}
-                    })
-                    .then(function (response) {
-                        console.log(response);
-                    })
-                    .catch(function (error) {
-                        console.log(error);
-                    })
+            // $("#starts-at, #ends-at").datetimepicker(),
+
+            $('#save-event').on('click', function () {
+                let title = $('#title').val();
+                let start_date = $('#starts-at').val()
+                let end_date = $('#ends-at').val()
+
+                let csrf_token = '{{ csrf_token }}'
 
 
-                    // add event to calendar
-                    var eventData = {
-                        title: title,
-                        start: start_date,
-                        end: end_date,
-                        allDay: true,
-                    };
-                    $('#calendar').fullCalendar('renderEvent', eventData, true);
+                axios.post("{% url 'shifty:save_day_off' %}", {
+                    title: title,
+                    start_date: start_date,
+                    end_date: end_date
+                }, {
+                    headers: {'X-CSRFToken': csrf_token}
+                })
+                .then(function (response) {
+                    console.log(response);
+                })
+                .catch(function (error) {
+                    console.log(error);
+                });
 
-                    $('.modal').modal('hide');
 
-                }));
+                // add event to calendar
+                var eventData = {
+                    title: title,
+                    start: start_date,
+                    end: end_date,
+                    allDay: true,
+                };
+                $('#calendar').fullCalendar('renderEvent', eventData, true);
+
+                $('.modal').modal('hide');
+
+            });
 
 
             axios.get("{% url 'shifty:get_days_off' %}")
             .then(function (response) {
-                console.log(response.data.events);
-            for (let i=0; i<response.data.events.length; ++i) {
+                //console.log(response.data.events);
+                for (let i=0; i<response.data.events.length; ++i) {
                     $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-            }})
+                }
+            })
             .catch(function (error) {
                 console.log(error);
-            })});
+            })
+
+            axios.get('https://www.googleapis.com/calendar/v3/calendars/en.uk%40holiday.calendar.google.com/events?key=AIzaSyBzz_Zfd65IMUl0Vo2R0fuWYcL1aGAtCgM')
+                .then(function (response) {
+                console.log(response.data);
+                for (let i=0; i<response.data.events.length; ++i) {
+                    $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
+                }
+            })
+            .catch(function (error) {
+                console.log(error);
+            })
+        })
 
 
     </script>
