--- a/cappy/shifty/templates/shifty/index2.html
+++ b/cappy/shifty/templates/shifty/index2.html
@@ -1,5 +1,5 @@
 {% extends 'shifty/base_generic.html' %}
 
-{% block content %}
-    <div>Yaay!</div>
-{% endblock %}
+<!--{% block content %}-->
+    <!--<div>Yaay!</div>-->
+<!--{% endblock %}-->
