--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -2,6 +2,9 @@
 {% load static %}
 <html>
 <head>
+    <meta charset="UTF-8">
+    <title>Shifti</title>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
@@ -11,9 +14,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"
           media="print"/>
-
-
-
     <style>
         .ui-datepicker-prev {
             background-color: teal;
@@ -40,24 +40,28 @@
         #ui-datepicker-div {
             background-color: #111111;
         }
+
         .fc-title {
             color: black;
         }
-         .row {
-            display:flex;
-            flex-direction:row;
+
+        .row {
+            display: flex;
+            flex-direction: row;
         }
+
         aside {
             margin-left: 3%;
             width: 30%;
         }
-       .content-container{
-           width: 90%;
-           margin-top: 4%;
-           margin-left: 5%;
-       }
+
+        .content-container {
+            width: 90%;
+            margin-top: 4%;
+            margin-left: 5%;
+        }
     </style>
-    <body>
+
     <script>
 
         $(document).ready(function () {
@@ -121,12 +125,12 @@
                 }, {
                     headers: {'X-CSRFToken': csrf_token}
                 })
-                .then(function (response) {
-                    console.log(response);
-                })
-                .catch(function (error) {
-                    console.log(error);
-                });
+                    .then(function (response) {
+                        console.log(response);
+                    })
+                    .catch(function (error) {
+                        console.log(error);
+                    });
 
 
                 // add event to calendar
@@ -144,73 +148,64 @@
 
 
             axios.get("{% url 'shifty:get_days_off' %}")
-            .then(function (response) {
-                for (let i=0; i<response.data.events.length; ++i) {
-                    $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-                }
-            })
-            .catch(function (error) {
-                console.log(error);
-            })
+                .then(function (response) {
+                    for (let i = 0; i < response.data.events.length; ++i) {
+                        $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
+                    }
+
+                    // building a list on the right
+                    let ul = document.querySelector('#off_list')
+                    for (let i = 0; i < response.data.events.length; ++i) {
+                        let li = document.createElement('li')
+                        // format the date to look better
+                        li.innerText = response.data.events[i].title + response.data.events[i].start + response.data.events[i].end;
+                        ul.appendChild(li)
+                    }
+                })
+                .catch(function (error) {
+                    console.log(error);
+                })
 
             axios.get('https://www.googleapis.com/calendar/v3/calendars/en.uk%40holiday.calendar.google.com/events?key=AIzaSyBzz_Zfd65IMUl0Vo2R0fuWYcL1aGAtCgM')
                 .then(function (response) {
-                console.log(response.data);
-                for (let i=0; i<response.data.events.length; ++i) {
-                    $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-                }
-            })
-            .catch(function (error) {
-                console.log(error);
-            })
-            axios.get("{% url 'shifty:get_days_off' %}")
-                .then(function(response) {
-                    console.log(response.data.events)
-                    $("#off_list").html("<ul>")
+                    console.log(response.data);
                     for (let i = 0; i < response.data.events.length; ++i) {
-                        $("#off_list").append("<li>" + response.data.events[i].title + response.data.events[i].start + response.data.events[i].end + "</li>")
+                        $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
                     }
-                    $("#off_list").append("<ul>")
+                })
+                .catch(function (error) {
+                    console.log(error);
                 })
 
-            });
-
+        });
 
 
     </script>
-    <head>
-        <meta charset="UTF-8">
-        <title>Shifti</title>
 
-    </head>
     <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
-
-    <!--<div id="maindiv">-->
-    <div class="page-header">
-        <h1></h1>
-    </div>
-    <div class="content-container">
-        <div class="row">
-            <div class="col-md-8">
+</head>
+<body>
+<div class="page-header">
+    <h1></h1>
+</div>
+<div class="content-container">
+    <div class="row">
+        <div class="col-md-8">
             <!--{% block content %}-->
             <!--{% endblock %}-->
-                <div id="calendar"></div>
-                <div id="datepicker"></div>
-                                </div>
+            <div id="calendar"></div>
+            <div id="datepicker"></div>
+        </div>
 
-                <aside>
-                <div class="header">
-                    <h1> Days Off </h1>
-                    <div id="off_list">
-                    </div>
-                    </div>
-                </aside>
-                            </div>
-                </div>
-                        </div>
-
-
-
+        <aside>
+            <div class="header">
+                <h1> Days Off </h1>
+                <div id="off_list">
+            </div>
+        </aside>
+    </div>
+</div>
+</div>
 
 
 <div class="modal fade" tabindex="-1" role="dialog">
@@ -250,11 +245,5 @@
 </div>
 
 
-            </div>
-        </div>
-    </div>
 </body>
-<script>
-
-</script>
 </html>
