--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -1,211 +1,10 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="en">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"
-          media="print"/>
-
-
-
-    <style>
-        .ui-datepicker-prev {
-            background-color: teal;
-            margin-right: 10%;
-
-        }
-
-        .ui-datepicker-prev:hover {
-            cursor: pointer;
-
-        }
-
-        .ui-datepicker-next {
-            background-color: teal;
-            margin-right: 10%;
-
-        }
-
-        .ui-datepicker-next:hover {
-            cursor: pointer;
-
-        }
-
-        #ui-datepicker-div {
-            background-color: #111111;
-        }
-        .fc-title {
-            color: black;
-        }
-    </style>
-    <script>
-
-        $(document).ready(function () {
-            $('#calendar').fullCalendar({
-
-                header: {
-                    left: 'prev,next',
-                    center: 'title',
-                    right: 'prevYear, nextYear, month,agendaWeek,agendaDay'
-                },
-                buttonText: {
-                    prevYear: new moment().year() - 1,
-                    nextYear: new moment().year() + 1
-                },
-                viewRender: function (view) {
-                    var y = moment($('#calendar').fullCalendar('getDate')).year();
-                    $(".fc-prevYear-button").text(y - 1);
-                    $(".fc-nextYear-button").text(y + 1);
-                },
-                navLinks: true,
-                selectable: true,
-                selectHelper: true,
-                select: function (start, end) {
-                    $('#title').val('');
-                    $('#starts-at').val(start.format('MM/DD/YYYY'));
-                    $('#ends-at').val(start.format('MM/DD/YYYY'));
-
-                    $("#starts-at").datepicker();
-                    $("#ends-at").datepicker();
-                    $('.modal').modal('show');
-                },
-                eventClick: function (event, element) {
-                    $('.modal').modal('show');
-                    $('.modal').find('#title').val(event.title);
-                    $('.modal').find('#starts-at').val(event.start);
-                    $('.modal').find('#ends-at').val(event.end);
-
-                },
-
-                minTime: "05:00:00",
-                maxTime: "22:00:00",
-                editable: true,
-                eventLimit: true
-            })
-
-
-            // $("#starts-at, #ends-at").datetimepicker(),
-
-            $('#save-event').on('click', function () {
-                let title = $('#title').val();
-                let start_date = $('#starts-at').val()
-                let end_date = $('#ends-at').val()
-
-                let csrf_token = '{{ csrf_token }}'
-
-
-                axios.post("{% url 'shifty:save_day_off' %}", {
-                    title: title,
-                    start_date: start_date,
-                    end_date: end_date
-                }, {
-                    headers: {'X-CSRFToken': csrf_token}
-                })
-                .then(function (response) {
-                    console.log(response);
-                })
-                .catch(function (error) {
-                    console.log(error);
-                });
-
-
-                // add event to calendar
-                var eventData = {
-                    title: title,
-                    start: start_date,
-                    end: end_date,
-                    allDay: true,
-                };
-                $('#calendar').fullCalendar('renderEvent', eventData, true);
-
-                $('.modal').modal('hide');
-
-            });
-
-
-            axios.get("{% url 'shifty:get_days_off' %}")
-            .then(function (response) {
-                //console.log(response.data.events);
-                for (let i=0; i<response.data.events.length; ++i) {
-                    $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-                }
-            })
-            .catch(function (error) {
-                console.log(error);
-            })
-
-            axios.get('https://www.googleapis.com/calendar/v3/calendars/en.uk%40holiday.calendar.google.com/events?key=AIzaSyBzz_Zfd65IMUl0Vo2R0fuWYcL1aGAtCgM')
-                .then(function (response) {
-                console.log(response.data);
-                for (let i=0; i<response.data.events.length; ++i) {
-                    $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-                }
-            })
-            .catch(function (error) {
-                console.log(error);
-            })
-        })
-
-
-    </script>
-    <head>
-        <meta charset="UTF-8">
-        <title>Shifti</title>
-
-    </head>
-    <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
-
-
+    <meta charset="UTF-8">
+    <title>Shifti</title>
+</head>
 <body>
-
-<div id='calendar'></div>
-<div id='datepicker'></div>
-
-<div class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title">Create new event</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <label class="col-xs-4" for="title">User Name: </label>
-                        <input type="text" name="title" id="title"/>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <label class="col-xs-4" for="starts-at">Starting Day: </label>
-                        <input type="datetime" placeholder="MM/DD/YYYY" name="starts_at" id="starts-at"/>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <label class="col-xs-4" for="ends-at">Ending Day: </label>
-                        <input type="datetime" placeholder="MM/DD/YYYY" name="ends_at" id="ends-at"/>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="save-event">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 </body>
-<script>
-
-</script>
 </html>
