schedule app wip

--- a/cappy/shifty/templates/shifty/index.html
+++ b/cappy/shifty/templates/shifty/index.html
@@ -4,7 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Shifti</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
+<style>
+    table {
+        margin-top: 10%
+    }
+</style>
 </head>
 <body>
+<table align="center">
+    <tr>
+        <td>
+            <h2>Register</h2>
+            <form action="{% url 'shifty:register_user' %}" method="post">
+                {% csrf_token %}
+                <table>
+                    <tr>
+                        <td>Username</td>
+                        <td><input type="text" name="username"/></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td><input type="text" name="email"/></td>
+                    </tr>
+                    <tr>
+                        <td>Password</td>
+                        <td><input type="password" name="password"/></td>
+                    </tr>
+                </table>
+                <button type="submit">register</button>
+            </form>
+        </td>
+        <td>
+            <h2>Login</h2>
+            <form action="{% url 'shifty:login_user' %}" method="post">
+                {% csrf_token %}
+                <table>
+                    <tr>
+                        <td>Username</td>
+                        <td><input type="text" name="username"/></td>
+                    </tr>
+                    <tr>
+                        <td>Password</td>
+                        <td><input type="password" name="password"/></td>
+                    </tr>
+                </table>
+                <button type="submit">login</button>
+            </form>
+        </td>
+    </tr>
+
+</table>
 </body>
 </html>
