schedule app wip

--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -100,7 +100,7 @@
                     $('.modal').find('#ends-at').val(event.end);
 
                 },
-
+                // create shift hours
                 minTime: "05:00:00",
                 maxTime: "22:00:00",
                 editable: true,
@@ -117,7 +117,7 @@
 
                 let csrf_token = '{{ csrf_token }}'
 
-
+                // save events to calendar
                 axios.post("{% url 'shifty:save_day_off' %}", {
                     title: title,
                     start_date: start_date,
@@ -133,7 +133,7 @@
                     });
 
 
-                // add event to calendar
+                // add event to calendar via modal
                 var eventData = {
                     title: title,
                     start: start_date,
@@ -146,14 +146,14 @@
 
             });
 
-
+            // get list from database to appear in calendar on page load
             axios.get("{% url 'shifty:get_days_off' %}")
                 .then(function (response) {
                     for (let i = 0; i < response.data.events.length; ++i) {
                         $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
                     }
 
-                    // building a list on the right
+                    // building list of day off on the right
                     let ul = document.querySelector('#off_list')
                     for (let i = 0; i < response.data.events.length; ++i) {
                         let li = document.createElement('li')
@@ -165,20 +165,19 @@
                 .catch(function (error) {
                     console.log(error);
                 })
-
-            axios.get('https://www.googleapis.com/calendar/v3/calendars/en.uk%40holiday.calendar.google.com/events?key=AIzaSyBzz_Zfd65IMUl0Vo2R0fuWYcL1aGAtCgM')
-                .then(function (response) {
-                    console.log(response.data);
-                    for (let i = 0; i < response.data.events.length; ++i) {
-                        $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
-                    }
-                })
-                .catch(function (error) {
-                    console.log(error);
-                })
+            // to add holidays to calendar
+            // axios.get('https://www.googleapis.com/calendar/v3/calendars/en.uk%40holiday.calendar.google.com/events?key=AIzaSyBzz_Zfd65IMUl0Vo2R0fuWYcL1aGAtCgM')
+            //     .then(function (response) {
+            //         console.log(response.data);
+            //         for (let i = 0; i < response.data.events.length; ++i) {
+            //             $('#calendar').fullCalendar('renderEvent', response.data.events[i], true);
+            //         }
+            //     })
+            //     .catch(function (error) {
+            //         console.log(error);
+            //     })
 
         });
-
 
     </script>
 
