--- a/cappy/shifty/templates/registration/login.html
+++ b/cappy/shifty/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends "shifty/base_generic.html" %}
 
 {% block content %}
 
@@ -15,7 +15,7 @@
   {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="{% url 'shifty:login_user' %}">
 {% csrf_token %}
 
 <div>
@@ -34,6 +34,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'shifty:index' %}">Lost password?</a></p>
 
 {% endblock %}
