--- a/cappy/shifty/templates/registration/login.html
+++ b/cappy/shifty/templates/registration/login.html
@@ -34,6 +34,6 @@
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'shifty:index' %}">Lost password?</a></p>
+<p><a href="{% url 'shifty:login' %}">Lost password?</a></p>
 
 {% endblock %}
