--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -66,7 +66,10 @@
         th, td {
             padding: 5px;
             text-align: left;
-}
+        }
+        logo {
+            background-image: url("shiftilogo.png");
+        }
     </style>
 
     <script>
