--- a/cappy/shifty/templates/shifty/signin.html
+++ b/cappy/shifty/templates/shifty/signin.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
 <style>
     table {
-        margin-top: 10%
+        margin-top: 8%
+    }
+    img {
+        display: block;
+        width:400px;
+        margin-top: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     }
 </style>
 </head>
 <body>
+<img src="{% static 'shifty/shiftilogo.png' %}"/>
 <table align="center">
     <tr>
         <td>
