--- a/cappy/shifty/templates/shifty/signin.html
+++ b/cappy/shifty/templates/shifty/signin.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
 <style>
     table {
-        margin-top: 8%
+        margin-top: 5%;
     }
     img {
         display: block;
         width:400px;
-        margin-top: 40px;
+        margin-top: 55px;
         margin-left: auto;
         margin-right: auto;
         /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+    }
+    button {
+        background-color: #B58900;
     }
 </style>
 </head>
