--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -51,7 +51,7 @@
 
         aside {
             margin-left: 3%;
-            width: 200px;
+            width: 300px;
         }
         .content-container {
             width: 90%;
@@ -83,6 +83,7 @@
         margin-right: auto;
         /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
     }
+
     </style>
 
     <script>
@@ -225,7 +226,7 @@
 
     </script>
 
-    <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/space.css' %}">
 </head>
 <body>
 <div class="page-header">
