--- a/cappy/shifty/static/space.css
+++ b/cappy/shifty/static/space.css
@@ -42,7 +42,9 @@
   --font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
-
+/*tr:nth-child(even) {*/
+/*background-color: #3b72b5;*/
+/*}*/
 *,
 *::before,
 *::after {
@@ -62,6 +64,13 @@ html {
     background-color: #3b72b5;
     border: none;
 }
+.fc-content {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#7f7fff));
+  background-image: linear-gradient(#067020, #509a62 50%, #7f7fff);
+  background-repeat: no-repeat;
+  -webkit-filter: none;
+          filter: none;
+}
 @-ms-viewport {
   width: device-width;
 }
@@ -69,9 +78,12 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
-table {
+table, th {
     /*font-size: 1rem;*/
-
+  border: 1px solid lightgrey;
+}
+.header{
+  width: 100%;
 }
 
 body {
@@ -1900,9 +1912,13 @@ pre code {
   border: 0;
 }
 
-.table-dark.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(255, 255, 255, 0.05);
-}
+/*tr:nth-child(even) {*/
+  /*background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#7f7fff));*/
+  /*background-image: linear-gradient(#067020, #509a62 50%, #7f7fff);*/
+  /*background-repeat: no-repeat;*/
+  /*-webkit-filter: none;*/
+          /*filter: none;*/
+/*}*/
 
 .table-dark.table-hover tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.075);
@@ -9389,15 +9405,15 @@ a.text-light:hover, a.text-light:focus {
 }
 
 a.text-dark:hover, a.text-dark:focus {
-  color: #1a1919 !important;
+  color: #000000 !important;
 }
 
 .text-body {
-  color: #777 !important;
+  color: #000000 !important;
 }
 
 .text-muted {
-  color: #777 !important;
+  color: #000000 !important;
 }
 
 .text-black-50 {
@@ -9405,7 +9421,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: rgba(0, 0, 0, 0.5) !important;
 }
 
 .text-hide {
@@ -9483,7 +9499,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   .table td,
   .table th {
-    background-color: #fff !important;
+    background-color: #ffffff !important;
   }
   .table-bordered th,
   .table-bordered td {
@@ -9554,23 +9570,23 @@ a.text-dark:hover, a.text-dark:focus {
 .btn {
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.1);
 }
-
+/*logout button*/
 .btn-primary {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#6d94bf), color-stop(50%, #446E9B), to(#3e648d));
-  background-image: linear-gradient(#6d94bf, #446E9B 50%, #3e648d);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
-  border: 1px solid #345578;
+  border: 1px solid #287916;
 }
 
 .btn-primary:not(.disabled):hover {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#5f8ab9), color-stop(50%, #3e648d), to(#385a7f));
-  background-image: linear-gradient(#5f8ab9, #3e648d 50%, #385a7f);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
-  border: 1px solid #2e4b69;
+  border: 1px solid #287916;
 }
 
 .btn-secondary {
@@ -9593,17 +9609,16 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-success {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#61dd45), color-stop(50%, #3CB521), to(#36a41e));
-  background-image: linear-gradient(#61dd45, #3CB521 50%, #36a41e);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
-  border: 1px solid #2e8a19;
 }
 
 .btn-success:not(.disabled):hover {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#52da34), color-stop(50%, #36a41e), to(#31921b));
-  background-image: linear-gradient(#52da34, #36a41e 50%, #31921b);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
@@ -9611,21 +9626,21 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .btn-info {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#7bbdf7), color-stop(50%, #3399F3), to(#208ff2));
-  background-image: linear-gradient(#7bbdf7, #3399F3 50%, #208ff2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
-  border: 1px solid #0e80e6;
+  border: 1px solid #287916;
 }
 
 .btn-info:not(.disabled):hover {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#68b3f6), color-stop(50%, #208ff2), to(#0e86ef));
-  background-image: linear-gradient(#68b3f6, #208ff2 50%, #0e86ef);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
+  background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
   -webkit-filter: none;
           filter: none;
-  border: 1px solid #0c75d2;
+  border: 1px solid #287916;
 }
 
 .btn-warning {
