--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -15,31 +15,31 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"
           media="print"/>
     <style>
-        .ui-datepicker-prev {
-            background-color: #B58900;
-            margin-right: 10%;
+        /*.ui-datepicker-prev {*/
+            /*background-color: #B58900;*/
+            /*margin-right: 10%;*/
 
-        }
+        /*}*/
 
-        .ui-datepicker-prev:hover {
-            cursor: pointer;
+        /*.ui-datepicker-prev:hover {*/
+            /*cursor: pointer;*/
 
-        }
+        /*}*/
 
-        .ui-datepicker-next {
-            background-color: #B58900;
-            margin-right: 10%;
+        /*.ui-datepicker-next {*/
+            /*background-color: #B58900;*/
+            /*margin-right: 10%;*/
 
-        }
+        /*}*/
 
-        .ui-datepicker-next:hover {
-            cursor: pointer;
+        /*.ui-datepicker-next:hover {*/
+            /*cursor: pointer;*/
 
-        }
+        /*}*/
 
-        #ui-datepicker-div {
-            background-color: #002B36;
-        }
+        /*#ui-datepicker-div {*/
+            /*background-color: #002B36;*/
+        /*}*/
 
         .fc-title {
             color: white;
