--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -226,7 +226,14 @@
 
     </script>
 
-    <link rel="stylesheet" type="text/css" href="{% static '/space.css' %}">
+    <!--<link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}" title="dark">-->
+
+     <link rel="alternative stylesheet" type="text/css" href="{% static '/bstheme.css' %}" title="dark">
+    <link rel="alternate stylesheet" type="text/css" href="{% static '/space.css' %}" title="light">
+
+
+
+
 </head>
 <body>
 <div class="page-header">
